Attempting to integrate panels style

--- a/all.css
+++ b/all.css
@@ -10,3 +10,5 @@
 @import url('styles/dosylook/sidebar-style.css')
 @import url('styles/dosylook/sticky-style.css')
 @import url('styles/dosylook/drawer-style.css')
+@import url('styles/dosylook/steps-style.css')
+@import url('styles/dosylook/panels-style.css')
