--- a/styles/dosylook/text-style.css
+++ b/styles/dosylook/text-style.css
@@ -55,7 +55,7 @@
     text-indent: 2em;
   }
 
-  label, span, a, input {
+  label, span, a, input, select {
     text-indent: 0;
     min-height: 2rem;
   }
