Added some CSS to tidy the build and search panel tabs
Also put the submit buttons inline with the text inputs

--- a/custom.css
+++ b/custom.css
@@ -9,3 +9,23 @@
     position: relative;
     padding: 0;
   }
+
+  * {
+    outline: 1px solid lime;
+  }
+
+/* custom test */
+
+  nav.tabs,
+  nav.tabs > ul,
+  nav.tabs article.tab,
+  nav.tabs article.tab form,
+  nav.tabs article.tab form {
+    margin: 0;
+    width: 100%;
+  }
+
+  nav.tabs article.tab p {
+    width: 100%;
+  }
+
