Updated styles to latest dosylook (@1.0.8)

--- a/all.css
+++ b/all.css
@@ -12,3 +12,5 @@
 @import url('styles/dosylook/drawer-style.css');
 @import url('styles/dosylook/steps-style.css');
 @import url('styles/dosylook/panels-style.css');
+@import url('styles/dosylook/state-style.css');
+@import url('styles/dosylook/list-mutate-style.css');
