--- a/styles/dosylook/all.css
+++ b/styles/dosylook/all.css
@@ -12,3 +12,5 @@
 @import url('styles/dosylook/drawer-style.css');
 @import url('styles/dosylook/steps-style.css');
 @import url('styles/dosylook/panels-style.css');
+@import url('styles/dosylook/state-style.css');
+@import url('styles/dosylook/list-mutate-style.css');
