--- a/custom.css
+++ b/custom.css
@@ -31,3 +31,16 @@
     width: 100%;
   }
 
+  nav.workspace article footer {
+    flex-basis: 100%;
+  }
+
+
+/* components webview */
+
+  webview {
+    border: 0;
+    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+  }
