--- a/styles/dosylook/all-local.css
+++ b/styles/dosylook/all-local.css
@@ -1,5 +1,3 @@
-@import url('default_theme.css');
-@import url('theme_plain_grey1.css');
 @import url('style.css');
 @import url('menu-style.css');
 @import url('busy-style.css');
@@ -14,3 +12,4 @@
 @import url('panels-style.css');
 @import url('state-style.css');
 @import url('list-mutate-style.css');
+@import url('theme_bloomberg_term.css');
