Trying new map building interface

--- a/all.css
+++ b/all.css
@@ -12,4 +12,6 @@
 @import url('styles/dosylook/panels-style.css');
 @import url('styles/dosylook/state-style.css');
 @import url('styles/dosylook/list-mutate-style.css');
+/*
 @import url('styles/dosylook/theme_bloomberg_term.css');
+*/
