--- a/custom.css
+++ b/custom.css
@@ -14,6 +14,10 @@
     position: relative;
   }
 
+  nav.workspace > article {
+    flex-grow: 1;
+  }
+
   nav.workspace > article > main {
     max-height: 100%;
     overflow-y: auto;
@@ -25,6 +29,8 @@
     max-height: 100%;
     overflow-y: auto;
     padding: 0;
+    width: 420px;
+    flex-grow: 0;
   }
 
 
