--- a/custom.css
+++ b/custom.css
@@ -23,6 +23,7 @@
     overflow-y: auto;
     position: relative;
     padding: 0;
+    outline: none;
   }
 
   nav.workspace > aside {
@@ -31,6 +32,7 @@
     padding: 0;
     width: 340px;
     flex-grow: 0;
+    outline: none;
   }
 
 
@@ -67,4 +69,5 @@
     margin: 0 auto;
     width: 100%;
     height: 100%;
+    outline: none;
   }
